--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_booking_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_booking_tour.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/idUserbooktour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1. Nguyen Van A"
