--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_business_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_business_layout.xml
@@ -67,12 +67,14 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/avatarBusiness"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/image"/>
 
             <EditText
                 style="@style/Edittext"
+                android:id="@+id/edtNameBusiness"
                 android:drawableLeft="@drawable/detail_user"
                 android:drawablePadding="20dp"
                 android:singleLine="true"
@@ -80,14 +82,8 @@
 
             <EditText
                 style="@style/Edittext"
-                android:drawableLeft="@drawable/gmail"
-                android:drawablePadding="20dp"
-                android:singleLine="true"
-                android:hint="Địa chỉ mail"/>
-
-            <EditText
-                style="@style/Edittext"
                 android:inputType="number"
+                android:id="@+id/edtPhoneBusiness"
                 android:drawableLeft="@drawable/ic_phone"
                 android:drawablePadding="20dp"
                 android:singleLine="true"
@@ -95,12 +91,14 @@
 
             <EditText
                 style="@style/Edittext"
+                android:id="@+id/edtAddressBusiness"
                 android:drawableLeft="@drawable/detail_address"
                 android:drawablePadding="20dp"
                 android:singleLine="true"
                 android:hint="Địa chỉ"/>
 
             <TextView
+                android:id="@+id/txtUpdateBusiness"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
