--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_business_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_business_layout.xml
@@ -68,8 +68,8 @@
 
             <ImageView
                 android:id="@+id/avatarBusiness"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:src="@drawable/image"/>
 
             <EditText
