--- a/Code Project/DuLichDoDay/app/src/main/res/layout/book_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/book_tour.xml
@@ -49,7 +49,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerViewTour"
+                android:id="@+id/recyclerViewTourBook"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
