--- a/Code Project/DuLichDoDay/app/src/main/res/layout/tour_list_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/tour_list_layout.xml
@@ -32,7 +32,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Danh sách tour đặt"
+                    android:text="Danh sách tour"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
@@ -49,7 +49,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerViewTourDat"
+                android:id="@+id/recyclerViewTourList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
