--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
@@ -53,7 +53,7 @@
                            android:textSize="20sp"/>
 
                        <TextView
-                           android:id="@+id/cancel_update"
+                           android:id="@+id/cancel_update_user"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
