--- a/Code Project/DuLichDoDay/app/src/main/res/layout/manager_booking_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/manager_booking_tour_layout.xml
@@ -48,7 +48,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerViewTour"
+            android:id="@+id/recyclerViewManagerBookTour"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
