--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_booking_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_booking_tour.xml
@@ -66,7 +66,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_add_tour"
+                        android:id="@+id/tv_name_tour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TPHCM - Vĩnh Long"
@@ -74,7 +74,7 @@
                         android:textSize="17sp" />
 
                     <TextView
-                        android:id="@+id/tv_discip_tour"
+                        android:id="@+id/tv_time_tour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
