--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
@@ -26,8 +26,9 @@
 
                 <ImageView
                     android:id="@+id/img_tour"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"/>
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/travel"/>
 
             </LinearLayout>
 
