--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour_book.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour_book.xml
@@ -48,7 +48,7 @@
                     android:text="Mã tour : 1"/>
 
                 <TextView
-                    android:id="@+id/tv_add_tour_book"
+                    android:id="@+id/tv_name_tour_book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/black"
@@ -56,7 +56,7 @@
                     android:text="TPHCM - Vĩnh Long"/>
 
                 <TextView
-                    android:id="@+id/tv_discip_tour_book"
+                    android:id="@+id/tv_time_tour_book"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
